--- a/push-service-ios/pom.xml
+++ b/push-service-ios/pom.xml
@@ -6,4 +6,11 @@
     <version>0.0.1-SNAPSHOT</version>
   </parent>
   <artifactId>push-service-ios</artifactId>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.vbgps</groupId>
+  		<artifactId>push-service</artifactId>
+  		<version>0.0.1-SNAPSHOT</version>
+  	</dependency>
+  </dependencies>
 </project>
