--- a/push-service-weixin/pom.xml
+++ b/push-service-weixin/pom.xml
@@ -13,5 +13,11 @@
 			<artifactId>push-service</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.vbgps</groupId>
+			<artifactId>push-util</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 </project>
